# ceo-dashboard

./: .gitignore  CLAUDE.md  FUTURE.md  README.md  main.py  mcp_permission_server.py  pyproject.toml  test_browser.py  test_core.py  test_e2e.py
static/: app.js  index.html  style.css
