[project]
name = "ceo-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
]
